Fixed some width problems on small screens

--- a/packages/widget/src/components/AmountField.css
+++ b/packages/widget/src/components/AmountField.css
@@ -3,12 +3,12 @@
   font-size: 1rem;
   line-height: 54px;
   box-sizing: border-box;
-  width: 102%;
+  width: 100%;
   height: 59px;
   padding: 0 10px;
   border: 1px solid #ccc;
   border-right: transparent;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  flex: 1;
+  flex: 4;
 }
