--- a/packages/widget/src/components/TokenSelector.css
+++ b/packages/widget/src/components/TokenSelector.css
@@ -17,10 +17,7 @@
     font-weight: 700;
 
     & small {
-      font-size: 0.75rem;
-      font-weight: 400;
-      color: rgba(17, 34, 68, 0.5);
-      white-space: nowrap;
+      display: none;
     }
   }
 }
@@ -129,9 +126,6 @@
 }
 
 .tokenSelector {
-  flex-basis: 30%;
-  max-width: 30%;
-
   border: 1px solid #ccc;
   border-left: transparent;
   padding: 0 10px;
@@ -140,6 +134,8 @@
   border-bottom-left-radius: 0;
 
   display: flex;
+  flex: 1;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -149,4 +145,14 @@
 
 :global :local(.tokenSelector).Select.is-focused.is-open .Select-value {
   display: none;
+}
+
+@media (min-width: 650px) {
+  .tokenSelector .name small {
+    display: inline-flex;
+    font-size: 0.75rem;
+    font-weight: 400;
+    color: rgba(17, 34, 68, 0.5);
+    white-space: nowrap;
+  }
 }
